# terminal-based-games-builder

./: .gitignore  README.md  mkdocs.yml  notes.txt  pyproject.toml
docs/: index.md
terminal_based_games_builder/: .env.example  main.py
